--- a/startfm.html
+++ b/startfm.html
@@ -17,30 +17,12 @@
     
     .btn-16 {
       border: none;
-      color: #000;
-      position: relative; /* 추가 */
-    }
-    .btn-16:after {
-      position: absolute;
-      content: "";
-      width: 0;
-      height: 100%;
-      top: 0;
-      left: 0;
-      direction: rtl;
-      z-index: -1;
-    }
-    .btn-16:hover {
-      color: #000;
-    }
-    .btn-16:hover:after {
-      left: auto;
-      right: 0;
-      width: 100%;
+      position: relative;
     }
     .btn-16:active {
       top: 2px;
     }
+
   </style>
 </head>
 <body>
