버튼을 누르면 +1 텍스트가 뜨는 애니메이션
css와 자바스크립트를 이용한 애니메이션.

--- a/startfm.html
+++ b/startfm.html
@@ -8,7 +8,7 @@
     #imageButton {
       width: 100px;
       height: 100px;
-      background-image: url('tree.png');
+      background-image: url('chicken.png');
       background-size: cover;
       border: none;
       cursor: pointer;
@@ -23,6 +23,8 @@
       top: 2px;
     }
 
+    
+
   </style>
 </head>
 <body>
@@ -31,8 +33,8 @@
   <script>
     const imageButton = document.getElementById('imageButton');
     let clickCount = 0;
-    let originalImage = 'tree.png';
-    let newImage = 'sakana.png';
+    let originalImage = 'chicken.png';
+    let newImage = 'chicken2.png';
     let canClick = true;
 
     function resetImage() {
