동물농장 사이트 footer 버튼 수정

--- a/farmtest.html
+++ b/farmtest.html
@@ -12,8 +12,8 @@
     <link rel="icon" type="image/x-icon" href="./image_main/mini_plant.ico" />
     <script src="./farmtest.js" defer></script>
     <!-- <script src="./miniGame.js" defer></script> -->
-  </head>
-  <body>
+</head>
+<body>
     <!-- 요구사항 모달 -->
     <div class="demend-modal">
       <div class="modal__content">
@@ -125,10 +125,10 @@
         </div>
 
         <footer class="footer_main">
-          <button id="sell"><img src="./image_main/Sell.png" alt="" /></button>
-          <button id="miniGame"><img src="./image_main/Sell.png" alt="미니게임" /></button>
+          <button class="custom-btn btn-15" id="sell">판매</button>
+          <button class="custom-btn btn-15" id="miniGame">미니게임</button>
         </footer>
       </div>
     </div>
-  </body>
+</body>
 </html>
